Fixed padding for articles on tablets

--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -216,6 +216,7 @@ iframe {
 
 @media screen and (max-width: 864px) {
   #sidebar {
+    padding: 25px 25px 15px 25px;
     display: none;
   }
 
